Updates-README.md, Added-Comments

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!--Updated title in head-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Accessibility</title>
+    <title>Accessibility Webpage</title>
 </head>
+
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+<!--Added navbar-->
         <nav class="navbar">
             <ul>
                 <li>
@@ -23,7 +26,9 @@
             </ul>
         </nav>
     </header>
+<!--Added sections for better structure-->
     <section class="hero"></section>
+<!--Added alt attributes to all <img>-->
     <main class="flex-container">
     <section class="content">
         <article class="search-engine-optimization">
@@ -33,7 +38,6 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <br>
         <article class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -50,8 +54,8 @@
             </p>
         </article>
     </section>
-    <br>
-    <section class="benefits">
+
+    <section class="benefits" class="flexbox">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"></img>
@@ -75,7 +79,8 @@
         </article>
         </section>
     </Main>
-    <footer class="hover-footer">
+<!--Added footer and hid section-->
+    <footer class="footer">
        <section class="hide">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
