Changes-CSS_Positioning, Changes-Margins

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<!--Updated title in head-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Accessibility Webpage</title>
+    <title>Accessibility in Online Marketing</title>
 </head>
 
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-<!--Added navbar-->
         <nav class="navbar">
             <ul>
                 <li>
@@ -26,9 +23,7 @@
             </ul>
         </nav>
     </header>
-<!--Added sections for better structure-->
     <section class="hero"></section>
-<!--Added alt attributes to all <img>-->
     <main class="flex-container">
     <section class="content">
         <article class="search-engine-optimization">
@@ -45,7 +40,6 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <br>
         <article class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -55,22 +49,22 @@
         </article>
     </section>
 
-    <section class="benefits" class="flexbox">
-        <article class="benefit-lead">
+    <section class="benefits">
+        <article class="benefit-items">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article class="benefit-items">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article class="benefit-items">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"></img>
             <p>
@@ -79,7 +73,7 @@
         </article>
         </section>
     </Main>
-<!--Added footer and hid section-->
+
     <footer class="footer">
        <section class="hide">
         <h4>Made with ❤️️ by Horiseon</h4>
